Se cambiaron los scrollbars a una actualización, ahora permite desplazarse con el teclado. Además se corrigió el bug de los asserts y retracts, ahora ya funciona con reglas dinámicas.

--- a/webapp/resources/css/style.css
+++ b/webapp/resources/css/style.css
@@ -72,7 +72,7 @@ html, body {
 /* Fullcreen */
 
 .fullScreen {
-	background-color: white;
+	background-color: transparent;
 	border: none;
 	position: absolute;
 	left:    0;
@@ -116,7 +116,7 @@ html, body {
 
 /* report */
 .report {
-	background-color: white;
+	background-color: transparent;
 	border: none;
 	position: absolute;
 	right:    0;
